crates/anvil-tui/src/surfaces/doctor/snapshots/anvil_tui__surfaces__doctor__render__tests__snapshot_expanded.snap
---
source: crates/anvil-tui/src/surfaces/doctor/render.rs
expression: "crate::test_utils::snapshot::buffer_to_string(&buf)"
---
[[fg:#D95A00,bold]‡[fg:#D95A00,bold]][fg:#D95A00,bold] a[fg:#D95A00,bold]n[fg:#D95A00,bold]v[fg:#D95A00,bold]i[fg:#D95A00,bold]l[fg:#D95A00,bold] [fg:#85858A]>[fg:#85858A] [fg:#85858A]D[fg:#EBEBEB]o[fg:#EBEBEB]c[fg:#EBEBEB]t[fg:#EBEBEB]o[fg:#EBEBEB]r[fg:#EBEBEB]                                                              
D[fg:#EBEBEB,bold]i[fg:#EBEBEB,bold]a[fg:#EBEBEB,bold]g[fg:#EBEBEB,bold]n[fg:#EBEBEB,bold]o[fg:#EBEBEB,bold]s[fg:#EBEBEB,bold]t[fg:#EBEBEB,bold]i[fg:#EBEBEB,bold]c[fg:#EBEBEB,bold]s[fg:#EBEBEB,bold] [fg:#EBEBEB,bold] [fg:#EBEBEB,bold]1[fg:#2E8B57] [fg:#2E8B57]p[fg:#2E8B57]a[fg:#2E8B57]s[fg:#2E8B57]s[fg:#2E8B57]e[fg:#2E8B57]d[fg:#2E8B57]  1[fg:#CF5E5E] [fg:#CF5E5E]f[fg:#CF5E5E]a[fg:#CF5E5E]i[fg:#CF5E5E]l[fg:#CF5E5E]e[fg:#CF5E5E]d[fg:#CF5E5E]  1[fg:#D08C38] [fg:#D08C38]w[fg:#D08C38]a[fg:#D08C38]r[fg:#D08C38]n[fg:#D08C38]i[fg:#D08C38]n[fg:#D08C38]g[fg:#D08C38]s[fg:#D08C38]                                     
                                                                                
                                                                                
┌[fg:#85858A] [fg:#85858A]C[fg:#85858A]h[fg:#85858A]e[fg:#85858A]c[fg:#85858A]k[fg:#85858A]s[fg:#85858A] [fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]┐[fg:#85858A]
│[fg:#85858A]>[fg:#EBEBEB,bold]>[fg:#EBEBEB,bold] [fg:#EBEBEB,bold]<[fg:#2E8B57]<[fg:#2E8B57]d[fg:#2E8B57]i[fg:#2E8B57]a[fg:#2E8B57]m[fg:#2E8B57]o[fg:#2E8B57]n[fg:#2E8B57]d[fg:#2E8B57]>[fg:#2E8B57]>[fg:#2E8B57] [fg:#2E8B57]N[fg:#EBEBEB,bold]o[fg:#EBEBEB,bold]d[fg:#EBEBEB,bold]e[fg:#EBEBEB,bold].[fg:#EBEBEB,bold]j[fg:#EBEBEB,bold]s[fg:#EBEBEB,bold] [fg:#85858A] [fg:#85858A][[fg:#85858A]R[fg:#85858A]u[fg:#85858A]n[fg:#85858A]t[fg:#85858A]i[fg:#85858A]m[fg:#85858A]e[fg:#85858A]][fg:#85858A] [fg:#85858A] [fg:#85858A]v[fg:#85858A]2[fg:#85858A]2[fg:#85858A].[fg:#85858A]0[fg:#85858A].[fg:#85858A]0[fg:#85858A] [fg:#85858A]f[fg:#85858A]o[fg:#85858A]u[fg:#85858A]n[fg:#85858A]d[fg:#85858A]                              │[fg:#85858A]
│[fg:#85858A] [fg:#EBEBEB] [fg:#EBEBEB]x[fg:#CF5E5E] [fg:#CF5E5E]E[fg:#EBEBEB]S[fg:#EBEBEB]L[fg:#EBEBEB]i[fg:#EBEBEB]n[fg:#EBEBEB]t[fg:#EBEBEB] [fg:#EBEBEB]c[fg:#EBEBEB]o[fg:#EBEBEB]n[fg:#EBEBEB]f[fg:#EBEBEB]i[fg:#EBEBEB]g[fg:#EBEBEB] [fg:#85858A] [fg:#85858A][[fg:#85858A]L[fg:#85858A]i[fg:#85858A]n[fg:#85858A]t[fg:#85858A]i[fg:#85858A]n[fg:#85858A]g[fg:#85858A]][fg:#85858A] [fg:#85858A] [fg:#85858A]N[fg:#85858A]o[fg:#85858A] [fg:#85858A].[fg:#85858A]e[fg:#85858A]s[fg:#85858A]l[fg:#85858A]i[fg:#85858A]n[fg:#85858A]t[fg:#85858A]r[fg:#85858A]c[fg:#85858A] [fg:#85858A]f[fg:#85858A]o[fg:#85858A]u[fg:#85858A]n[fg:#85858A]d[fg:#85858A]                              │[fg:#85858A]
│[fg:#85858A] [fg:#EBEBEB] [fg:#EBEBEB]![fg:#D08C38] [fg:#D08C38]G[fg:#EBEBEB]i[fg:#EBEBEB]t[fg:#EBEBEB] [fg:#EBEBEB]h[fg:#EBEBEB]o[fg:#EBEBEB]o[fg:#EBEBEB]k[fg:#EBEBEB]s[fg:#EBEBEB] [fg:#85858A] [fg:#85858A][[fg:#85858A]H[fg:#85858A]o[fg:#85858A]o[fg:#85858A]k[fg:#85858A]s[fg:#85858A]][fg:#85858A] [fg:#85858A] [fg:#85858A]H[fg:#85858A]o[fg:#85858A]o[fg:#85858A]k[fg:#85858A]s[fg:#85858A] [fg:#85858A]n[fg:#85858A]o[fg:#85858A]t[fg:#85858A] [fg:#85858A]i[fg:#85858A]n[fg:#85858A]s[fg:#85858A]t[fg:#85858A]a[fg:#85858A]l[fg:#85858A]l[fg:#85858A]e[fg:#85858A]d[fg:#85858A]                                   │[fg:#85858A]
│[fg:#85858A]                                                                              │[fg:#85858A]
│[fg:#85858A]                                                                              │[fg:#85858A]
│[fg:#85858A]                                                                              │[fg:#85858A]
│[fg:#85858A]                                                                              │[fg:#85858A]
│[fg:#85858A]                                                                              │[fg:#85858A]
│[fg:#85858A]                                                                              │[fg:#85858A]
│[fg:#85858A]                                                                              │[fg:#85858A]
│[fg:#85858A]                                                                              │[fg:#85858A]
│[fg:#85858A]                                                                              │[fg:#85858A]
│[fg:#85858A]                                                                              │[fg:#85858A]
└[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]─[fg:#85858A]┘[fg:#85858A]
┌[fg:#D95A00] [fg:#D95A00]N[fg:#D95A00]o[fg:#D95A00]d[fg:#D95A00]e[fg:#D95A00].[fg:#D95A00]j[fg:#D95A00]s[fg:#D95A00] [fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]┐[fg:#D95A00]
│[fg:#D95A00]P[fg:#EBEBEB]a[fg:#EBEBEB]t[fg:#EBEBEB]h[fg:#EBEBEB]:[fg:#EBEBEB] [fg:#EBEBEB]/[fg:#EBEBEB]u[fg:#EBEBEB]s[fg:#EBEBEB]r[fg:#EBEBEB]/[fg:#EBEBEB]b[fg:#EBEBEB]i[fg:#EBEBEB]n[fg:#EBEBEB]/[fg:#EBEBEB]n[fg:#EBEBEB]o[fg:#EBEBEB]d[fg:#EBEBEB]e[fg:#EBEBEB]                                                           │[fg:#D95A00]
│[fg:#D95A00]                                                                              │[fg:#D95A00]
└[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]─[fg:#D95A00]┘[fg:#D95A00]
j[fg:#85858A]/[fg:#85858A]k[fg:#85858A] [fg:#85858A]n[fg:#85858A]a[fg:#85858A]v[fg:#85858A]i[fg:#85858A]g[fg:#85858A]a[fg:#85858A]t[fg:#85858A]e[fg:#85858A] [fg:#85858A] [fg:#85858A]e[fg:#85858A]n[fg:#85858A]t[fg:#85858A]e[fg:#85858A]r[fg:#85858A] [fg:#85858A]e[fg:#85858A]x[fg:#85858A]p[fg:#85858A]a[fg:#85858A]n[fg:#85858A]d[fg:#85858A] [fg:#85858A] [fg:#85858A]q[fg:#85858A] [fg:#85858A]q[fg:#85858A]u[fg:#85858A]i[fg:#85858A]t[fg:#85858A]                         [[fg:#85858A]‡[fg:#85858A]][fg:#85858A] [fg:#85858A]a[fg:#85858A] [fg:#85858A]n[fg:#85858A] [fg:#85858A]v[fg:#85858A] [fg:#85858A]i[fg:#85858A] [fg:#85858A]l[fg:#85858A] [fg:#85858A] [fg:#85858A]v[fg:#85858A]X[fg:#85858A].[fg:#85858A]Y[fg:#85858A].[fg:#85858A]Z[fg:#85858A]
